--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An accessible platform for photographers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch ./src/scss/style.scss:./src/css/style.css",
-    "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/"
+    "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/",
+    "start": "webpack"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,9 @@
   "homepage": "https://github.com/GitHubAgneska/HAgnesGenay_6_19112020#readme",
   "dependencies": {
     "sass": "^1.32.8"
+  },
+  "devDependencies": {
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0"
   }
 }
