--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sass": "sass --watch ./src/scss/style.scss:./src/css/style.css",
     "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/",
-    "start": "webpack"
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
