--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "css-loader": "^5.1.1",
+    "file-loader": "^6.2.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0"
   }
