--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "css-loader": "^5.1.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
