--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "sass": "sass --watch ./src/scss/style.scss:./src/css/style.css",
     "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/",
-    "start": "webpack --config webpack.config.js"
+    "start": "webpack serve --config webpack.dev.js --open",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,8 @@
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2", 
+    "webpack-merge": "^5.7.3"
   }
 }
