--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "sass",
     "html",
     "javascript",
-    "aria"
+    "webpack"
   ],
   "author": "HAGENAY",
   "license": "MIT",
@@ -30,6 +30,9 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
@@ -38,6 +41,9 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.2.8",
+    "postcss-loader": "^5.1.0",
+    "postcss-preset-env": "^6.7.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
